<resources>
    <string name="app_name">sc2-guides-android</string>
    <!-- Strings for drawer navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_all_guides">All Guides</string>
    <string name="nav_zerg_guides">Zerg Guides</string>
    <string name="nav_protoss_guides">Protoss Guides</string>
    <string name="nav_terran_guides">Terran Guides</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log Out</string>


    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Auth stuffs -->
    <string name="app_bar_main">StarCraft 2 Guides</string>
    <string name="app_bar_login">Log In</string>
    <string name="app_bar_signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="link_sign_up">No account? Join our community</string>
    <string name="hint_password">Your password...</string>
    <string name="hint_email">Your bank account...</string>
    <string name="signup">Sign Up</string>
    <string name="link_log_in">Already have an account? Click here to log in</string>

    <string name="zerg_fragment">Hello zerg fragment</string>
    <string name="nav_header_title">Header</string>
    <string name="nav_header_subtitle">Subtitle</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="alert_dialog_ok">Confirm</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="guide_title_hint">Title of the guide</string>
    <string name="create_guide">Create Guide</string>
    <string name="create_guide_body">What is the guide about...</string>
    <string name="nav_profile">Profile</string>
    <string name="guide_body_item_type_note">Note</string>
    <string name="guide_body_item_type_desc">Desc</string>
    <string name="create_guide_main_title">CREATE YOUR OWN STARCRAFT2 GUIDE</string>
    <string name="confirm_button">Confirm</string>
    <string name="add_desc">Add Description</string>
    <string name="add_note">Add Note</string>
    <string name="nav_my_guides">My Guides</string>
    <string name="nav_saved_guides">Saved Guides</string>
    <string name="dialog_delete_mess">Are you sure you want to delete this guide ?</string>
    <string name="add_timing">Add Timing</string>

    <string-array name="race_option">
        <item name="race_option_zerg">Zerg</item>
        <item name="race_option_protoss">Protoss</item>
        <item name="race_option_terran">Terran</item>
    </string-array>
</resources>
