<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_guides"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_all_guides" />
        <item
            android:id="@+id/nav_zerg_guides"
            android:icon="@drawable/ic_menu_zerg"
            android:title="@string/nav_zerg_guides" />
        <item
            android:id="@+id/nav_protoss_guides"
            android:icon="@drawable/ic_menu_protoss"
            android:title="@string/nav_protoss_guides" />
        <!-- TODO: find terran.svg later -->
        <item
            android:id="@+id/nav_terran_guides"
            android:icon="@drawable/ic_menu_protoss"
            android:title="@string/nav_terran_guides" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_log_out" />
        </menu>
    </item>

</menu>
