<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.guides.CreateGuideFragment">

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <TextView
            android:text="CREATE YOUR SC2 GUIDE"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/create_guide_spinner_label_my_race"
            android:text="Choose your race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/create_guide_spinner_my_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/create_guide_spinner_label_enemy_race"
            android:text="Opponent Race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/create_guide_spinner_enemy_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Title -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            >

            <EditText
                android:id="@+id/create_guide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guide_title_hint"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>

        <!-- BODY Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/create_guide_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_guide_body"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="10"
                android:gravity="top|start" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/create_guides_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            tools:listitem="@layout/card">
            <!-- TODO: change @layout/card to something else later-->
        </LinearLayout>

        <!-- buttons for body edit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_guide_add_timing"
                android:background="@android:color/holo_red_light"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:layout_marginEnd="12dp"
                android:text="Add Timing"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_guide_add_note"
                android:background="@android:color/holo_orange_light"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:layout_marginEnd="12dp"
                android:text="Add Note"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_guide_add_desc"
                android:background="@android:color/holo_blue_light"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:text="Add Desc"
                android:textColor="@android:color/white"
                 />

        </LinearLayout>



        <!-- CONFIRM CREATE GUIDE -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create_guide_button"
            android:background="@android:color/holo_green_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/create_guide"
            android:textColor="@android:color/white"/>

        <ProgressBar
            android:id="@+id/create_guide_progress"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal" />
    </LinearLayout>

</ScrollView>